samples/_failures_safe/1761622081_355143_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f20b320.c: In function ‘main’:
./samples/SAFE/__tmp_0f20b320.c:174:17: error: expected declaration or statement at end of input
  174 |                 double result = compute_factorial(number);
      |                 ^~~~~~
./samples/SAFE/__tmp_0f20b320.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f20b320.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f20b320.c:174:17: error: expected declaration or statement at end of input
